<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="@string/game_time_key"
        android:title="Time Limit"
        android:summary="Time for each round."
        android:defaultValue="30"
        android:inputType="number"
        android:digits="0123456789"
        android:text="30"/>

    <SwitchPreference
        app:key="@string/shake_enabled_key"
        android:defaultValue="false"
        android:title="Shake"
        android:summary="Enable shaking to skip the current word."/>

    <CheckBoxPreference
        app:key="@string/allow_skip_key"
        android:defaultValue="true"
        android:title="Skip"
        android:summary="Allow skipping words."/>


</PreferenceScreen>